Fix double scrollbar problem

--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -2,7 +2,7 @@ html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x: initial;
 }
 
 *,
